--- a/style.css
+++ b/style.css
@@ -968,7 +968,7 @@ html, body {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    padding: 0 8px;
+    padding: 0;
   }
 
 }
